# Forza-Horizon-Discord-Rich-Presence

./: README.md
src/: index.html  main.js
src-tauri/: Cargo.toml  cars.json  cars_fh6.json  tauri.conf.json
src-tauri/src/: database.rs  main.rs
src-tauri/src/modules/: fh6.rs  mod.rs
