[package]
name = "forzarichpresence"
version = "1.1.3"
description = "Forza Horizon Discord Rich Presence"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "forzarp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
indexmap = { version = "=1.9.3", features = ["std"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "=1.9.3", features = ["std"] }
sysinfo = "0.30"
tokio = { version = "1.36", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
discord-rich-presence = "0.2"
reqwest = { version = "0.12", features = ["json"] }
socket2 = "0.5"


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
